Renamed this HTMLParser to LinkExtractor to avoid confusion with main HTMLParser. Minor changes; this sort of works, actually.