@@ -20,14 +20,11 @@ import pageunit.html.HTMLParseException;
 import sun.net.URLCanonicalizer;
 
 /** A simple HTML Link Checker. 
- * Needs Properties to set depth, URLs to check. etc.
+ * Should have Properties to set depth, URLs to check. etc.
  * Responses not adequate; need to check at least for 404-type errors!
- * When all that is (said and) done, display in a Tree instead of a TextArea.
- * Then use Color coding to indicate errors.
- * <p>
- * TODO: convert to use more of PageUnit HTML parsing framework.
- *
- * @author Ian Darwin, Darwin Open Systems, www.darwinsys.com.
+ * <br/>
+ * XXX Move cache into a ThreadLocal, then un-synchronize all the methods.
+ * @author Ian Darwin, www.darwinsys.com.
  * @version $Id$
  */
 public class LinkChecker {
@@ -46,38 +43,20 @@ public class LinkChecker {
 			return;
 		}
 
-		// Open the root URL for reading. May be a filename or a real URL.
 		try {
-			try {
-				rootURL = new URL(rootURLString);
-			} catch (MalformedURLException e) {
-				// If not a valid URL, try again as a file.
-				rootURL = new File(rootURLString).toURL();
-			}
-		} catch (IOException e) {
-			System.out.println("openStream " + rootURLString + " " + e + "\n");
-			return;
-		}
+			rootURL = new URL(rootURLString);
+		} catch (MalformedURLException e) {
+			// If not a valid URL, try again as a file.
+			rootURL = new File(rootURLString).toURL();
+		}		
 		checkStartingAt(rootURL);		
 	}
 	
 	public synchronized static void checkStartingAt(URL rootURL) throws IOException {
 		System.out.printf("LinkChecker.checkStartingAt(%s)%n", rootURL);
 		
-		String rootURLString = rootURL.toString();
-		// If we're still here, the root URL given is OK.
-		// Next we make up a "directory" URL from it.
-		String rootURLdirString;
-		if (rootURLString.endsWith("/") ||
-			rootURLString.endsWith("\\"))
-				rootURLdirString = rootURLString;
-		else {
-			rootURLdirString = rootURLString.substring(0, 
-				rootURLString.lastIndexOf('/'));	// XXX or \
-		}
-
 		try {
-			List<HTMLComponent> urlTags = new HTMLParser().parse(new InputStreamReader((InputStream)rootURL.getContent()));
+			List<HTMLComponent> urlTags = new LinkExtractor().parse(new InputStreamReader((InputStream)rootURL.getContent()));
 			for (HTMLComponent tag : urlTags) {
 				System.out.printf("TAG %s%n", tag);
 						
@@ -102,6 +81,12 @@ public class LinkChecker {
 					continue;
 				}
 
+				if (href.equals("/") || href.startsWith("..") || href.startsWith("#")) {
+					System.out.println(href + " -- not checking\n");
+					// nothing doing!
+					continue; 
+				}
+				
 				URL hrefURL = new URL(rootURL, href);
 
 				if (hrefURL.getProtocol().equals("mailto:")) {
@@ -109,41 +94,22 @@ public class LinkChecker {
 					continue;
 				}
 
-				if (href.equals("/") || href.startsWith("..") || href.startsWith("#")) {
-					System.out.println(href + " -- not checking\n");
-					// nothing doing!
-					continue; 
-				}
-
-				// TRY THE URL.
-				System.out.println(checkOneLine(hrefURL));
-
-				// There should be an option to control whether to
-				// "try the url" first and then see if off-site, or
-				// vice versa, for the case when checking a site you're
-				// working on on your notebook on a train in the Rockies
-				// with no web access available.
-
-				// Now see if the URL is off-site.
+			// Now see if the URL is off-site.
 				if (!hrefURL.getHost().equals(rootURL.getHost())) {
 					System.out.println("-- OFFSITE -- not following\n");
 					continue;
 				}
-				System.out.println();
 
-				// If HTML, check it recursively. No point checking
-				// PHP, CGI, JSP, etc., since these usually need forms input.
+				// CHECK THE URL.
+				System.out.println(checkOneLink(hrefURL));
+	
 				// If a directory, assume HTML or something under it will work.
-				if (href.endsWith(".htm") ||
-					href.endsWith(".html") ||
-					href.endsWith("/")) {
+				if (href.endsWith("/")) {
 						++indent;
 						if (href.indexOf(':') != -1)
 							checkStartingAt(href);			// RECURSE
 						else {
-							String newRef = 
-								 rootURLdirString + '/' + href;
-							checkStartingAt(newRef);		// RECURSE
+							checkStartingAt(new URL(rootURL, href));		// RECURSE
 						}
 						--indent;
 				}
@@ -159,11 +125,11 @@ public class LinkChecker {
 	private static URLCanonicalizer uc = new URLCanonicalizer();
 	
 	/** Check one link, given its DocumentBase and the tag */
-	public static String checkOneLine(URL linkURL) {
+	public static synchronized String checkOneLink(URL linkURL) {
 		// System.out.printf("LinkChecker.checkLink(%s)%n", linkURL);
 		try { 
 			final String canonURLString = uc.canonicalize(linkURL.toString());
-			if (cache.contains(canonURLString)) 
+			if (cacheHit(canonURLString)) 
 				return null;			
 			cache.add(canonURLString);
 			linkURL = new URL(canonURLString);
@@ -191,4 +157,11 @@ public class LinkChecker {
 			return "DEAD";
 		}
     }
+	
+	public static synchronized boolean cacheHit(String s) {
+		if (cache.contains(s)) 
+			return true;			
+		cache.add(s);
+		return false;
+	}
  }
